2009-11-11  Eric Seidel  <eric@webkit.org>

        No review, adding second email address for an existing committer.

        Add Yong Li's second bugzilla account to his committer record.
        See: https://bugs.webkit.org/show_bug.cgi?id=27371#c27

        * Scripts/modules/committers.py:

2009-11-11  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        Implement missing functionality in the Gtk/Qt TestNetscapePlugin.

        * DumpRenderTree/gtk/TestNetscapePlugin/TestNetscapePlugin.cpp:
        (webkit_test_plugin_new_instance):
        (webkit_test_plugin_destroy_instance):
        (webkit_test_plugin_destroy_stream):

2009-11-11  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Mark Rowe.

        Implement the functionality needed by plugins/window-open.html

        * DumpRenderTree/gtk/TestNetscapePlugin/TestNetscapePlugin.cpp:
        (webkit_test_plugin_new_instance):
        (webkit_test_plugin_set_window):

2009-11-11  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Force -graphicssystem raster and -style windows when running DRT

        * DumpRenderTree/qt/main.cpp:
        * Scripts/run-webkit-tests:

2009-11-11  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Reviewed by Simon Hausmann.

        Compute correct library paths for Qt

        * Scripts/webkitdirs.pm:

2009-11-10  Mark Rowe  <mrowe@apple.com>

        Reviewed by Sam Weinig.

        <http://webkit.org/b/31200> Tests in http/tests/security/mixedContent start to fail when new tests are added

        The first request to an HTTPS URL results in didFailProvisionalLoadWithError being called with an error
        about the validity of the self-signed certificates used in the regression tests.  We would then add the
        host to the ignore list for SSL certificate errors and retry the request.  If this happened during a test